k8_manifest_stg/mng-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpson-stg-mng-deploy
  namespace: simpson-videochat
spec:
  selector:
    matchLabels:
      app: simpson-stg-mng
  replicas: 1
  template:
    metadata:
      labels:
        app: simpson-stg-mng
    spec:
      containers:
        - name: simpson-stg-mng-container
          image: 903501997462.dkr.ecr.ap-northeast-1.amazonaws.com/simpson-stg-mng:latest
          ports:
            - containerPort: 8003
