k8_manifest_stg/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpson-stg-redis-deployment
  namespace: simpson-videochat
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis-container
        image: redis
        ports:
        - containerPort: 6379
