k8_manifest_stg/sig-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpson-stg-sig-deploy
  namespace: simpson-videochat
spec:
  selector:
    matchLabels:
      app: simpson-stg-sig
  replicas: 1
  template:
    metadata:
      labels:
        app: simpson-stg-sig
    spec:
      containers:
        - name: simpson-stg-sig-container
          image: 903501997462.dkr.ecr.ap-northeast-1.amazonaws.com/simpson-stg-sig:latest
          ports:
            - containerPort: 8001
