k8_manifest_stg/turn-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpson-stg-turn-deploy
  namespace: simpson-videochat
spec:
  selector:
    matchLabels:
      app: simpson-stg-turn
  replicas: 1
  template:
    metadata:
      labels:
        app: simpson-stg-turn
    spec:     
      hostNetwork: true           
      volumes:
        - name: config-turn-volume
          configMap:
            name: simpson-stg-turn-config
            items:
              - key: turn_config
                path: turnserver.conf
      containers:
      - name: simpson-stg-turn-container
        image: instrumentisto/coturn
        volumeMounts:
        - mountPath: /etc/coturn/
          name: config-turn-volume
