k8_manifest_stg/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpson-stg-api-service
  namespace: simpson-videochat
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: note
      port: 8004
      protocol: TCP
      targetPort: 8004
  selector:
    app: simpson-stg-api
