k8_manifest_stg/mng-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpson-stg-mng-service
  namespace: simpson-videochat
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8003
  selector:
    app: simpson-stg-mng
